syntax = "proto3";
package service.types.v1;
option go_package = "github.com/bnb-chain/inscription-storage-provider/service/types/v1";

message ChallengeServiceChallengePieceRequest {
    string trace_id = 1;
    uint64 object_id = 2;
    uint32 challenge_idx = 3;
}

message ChallengeServiceChallengePieceResponse {
    string trace_id = 1;
    uint64 object_id = 2;
    bytes integrity_hash = 3;
    map<string, bytes> piece_hash = 4;
    string challenge_piece_key = 5;
    bytes piece_data = 6;
}

service ChallengeService {
    rpc ChallengePiece(ChallengeServiceChallengePieceRequest) returns (ChallengeServiceChallengePieceResponse) {};
}